--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,12 +19,13 @@
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/router": "^15.2.8",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "primeicons": "^6.0.1",
-    "primeng-lts": "^12.2.5",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.5.0",
     "zone.js": "~0.13.0"
   },
@@ -39,6 +40,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.0.4"
+    "typescript": "^4.8.2"
   }
 }
